[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stockmaster"
version = "0.1.0"
description = "Foundation for a KR stock research platform"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "StockMaster" }]
dependencies = [
  "apscheduler>=3.10,<4",
  "duckdb>=1.2,<2",
  "holidays>=0.69,<1",
  "httpx>=0.27,<1",
  "pandas>=2.2,<3",
  "plotly>=6,<7",
  "pyarrow>=23,<24",
  "pydantic>=2.9,<3",
  "python-dotenv>=1.0,<2",
  "PyYAML>=6.0,<7",
  "scikit-learn>=1.8,<2",
  "streamlit>=1.44,<2",
  "tenacity>=9,<10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.11,<0.12",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
